--- a/QtGuiApplication1/QtGuiApplication1.vcxproj
+++ b/QtGuiApplication1/QtGuiApplication1.vcxproj
@@ -137,6 +137,7 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\README.md" />
     <None Include="cpp.hint" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
